<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".room.ToDoMain">

    <EditText
        android:id="@+id/todo_description"
        android:layout_width="@dimen/dimen_250"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_26"
        android:layout_marginTop="@dimen/dimen_26"
        android:layout_marginEnd="@dimen/dimen_26"
        android:hint="@string/enter_description_text"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_26"
        android:text="@string/save_text"
        app:layout_constraintStart_toEndOf="@+id/todo_description"
        app:layout_constraintTop_toTopOf="@id/todo_description" />

    <Button
        android:id="@+id/showall_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_26"
        android:text="@string/show_all_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>