<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/background_image_header"
                android:scaleType="centerCrop"
                android:src="@drawable/banner_background_form" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:fontFamily="@font/suse_bold"
                    android:text="@string/job_application"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/suse_regular"
                    android:text="@string/company"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/heading"
                    app:layout_constraintTop_toBottomOf="@id/heading" />


                <TextView
                    android:id="@+id/company_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/suse_light"
                    android:text="@string/company_number"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/baseline_call_24"
                    app:layout_constraintStart_toStartOf="@id/company_name"
                    app:layout_constraintTop_toBottomOf="@id/company_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/suse_light"
                    android:text="@string/company_email"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/baseline_email_24"
                    app:layout_constraintStart_toStartOf="@id/company_phone"
                    app:layout_constraintTop_toBottomOf="@id/company_phone" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">


            <RelativeLayout
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/suse_regular"
                    android:text="@string/enter_name_form"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_name"
                    android:layout_margin="2dp"
                    android:background="@drawable/field_border"
                    android:inputType="text"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/text_surname"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_toEndOf="@id/text_name"
                    android:fontFamily="@font/suse_regular"
                    android:text="@string/text_surname"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_text_surname"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_surname"
                    android:layout_margin="2dp"
                    android:layout_toEndOf="@id/edit_text_name"
                    android:background="@drawable/field_border"
                    android:inputType="text"
                    android:padding="10dp" />
            </RelativeLayout>

            <RadioGroup
                android:id="@+id/gender_choice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/aero"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/full_name">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/aero"
                    android:fontFamily="@font/suse_regular"
                    android:padding="5dp"
                    android:text="@string/gender_male" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/aero"
                    android:fontFamily="@font/suse_regular"
                    android:padding="5dp"
                    android:text="@string/gender_female" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/gender_choice"
                app:layout_constraintTop_toBottomOf="@id/gender_choice">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/suse_regular"
                        android:text="@string/enter_dob_text"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edit_text_dob"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/field_border"
                        android:hint="DD/MM/YYYY"
                        android:inputType="text"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/suse_regular"
                        android:text="@string/text_email"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edit_text_email"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/field_border"
                        android:inputType="textEmailAddress"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/suse_regular"
                        android:text="@string/experience_in_year_text"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edit_text_experience"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/field_border"
                        android:inputType="numberDecimal"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/suse_regular"
                        android:text="@string/text_city"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edit_text_City"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/field_border"
                        android:inputType="text"
                        android:padding="10dp" />
                </LinearLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/tc_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="@color/aero"
                android:fontFamily="@font/suse_bold"
                android:text="@string/company_terms"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/linear_layout"
                app:layout_constraintTop_toBottomOf="@id/linear_layout" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/aero"
                android:fontFamily="@font/suse_bold"
                android:text="@string/submit_btn"
                app:layout_constraintStart_toStartOf="@id/tc_checkbox"
                app:layout_constraintTop_toBottomOf="@id/tc_checkbox" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>