<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/coil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:fontFamily="@font/font_form"
            android:text="@string/coil_text"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/coil_imageview"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="@dimen/dimen_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coil" />

        <Button
            android:id="@+id/load_coil_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:text="@string/load_image_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coil_imageview" />

        <TextView
            android:id="@+id/glide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:fontFamily="@font/font_form"
            android:text="@string/glide_text"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/load_coil_img" />

        <ImageView
            android:id="@+id/glide_imageview"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="@dimen/dimen_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glide" />

        <Button
            android:id="@+id/load_glide_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:text="@string/load_image_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glide_imageview" />

        <TextView
            android:id="@+id/coil_gif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:fontFamily="@font/font_form"
            android:text="@string/coil_text"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/load_glide_img" />

        <ImageView
            android:id="@+id/coil_imageview_gif"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="@dimen/dimen_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coil_gif" />

        <Button
            android:id="@+id/load_coil_gif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:text="@string/load_gif_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coil_imageview_gif" />

        <TextView
            android:id="@+id/glide_gif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:fontFamily="@font/font_form"
            android:text="@string/glide_text"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/load_coil_gif" />

        <ImageView
            android:id="@+id/glide_imageview_gif"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="@dimen/dimen_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glide_gif" />

        <Button
            android:id="@+id/load_glide_gif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:text="@string/load_gif_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glide_imageview_gif" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>